force-app/main/default/objects/DOF_Tax__c/DOF_Tax__c.object-meta.xml
<CustomObject>
    <label>Tax</label>
    <nameField>
        <displayFormat>TAX-{00000}</displayFormat>
        <label>Tax Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>