force-app/main/default/objects/DOF_Tax__c/fields/Issuing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Entity__c</fullName>
    <label>Issuing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>