force-app/main/default/objects/DOF_Tax__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal_Income_Tax</fullName>
                <label>Federal Income Tax</label>
            </value>
            <value>
                <fullName>State_Income_Tax</fullName>
                <label>State Income Tax</label>
            </value>
            <value>
                <fullName>Business_Tax</fullName>
                <label>Business Tax</label>
            </value>
            <value>
                <fullName>Property_Tax</fullName>
                <label>Property Tax</label>
            </value>
            <value>
                <fullName>Estate_Tax</fullName>
                <label>Estate Tax</label>
            </value>
            <value>
                <fullName>Sales_Tax</fullName>
                <label>Sales Tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>